--- a/thinx-firmware-esp8266-ino/thinx.yml
+++ b/thinx-firmware-esp8266-ino/thinx.yml
@@ -1,7 +1,8 @@
 arduino:
   platform: esp8266com
   arch: esp8266
-  board: d1_mini  
+  board: d1_mini
+  flash_ld: eagle.flash.4m1m.ld
   libs:
     - THiNX
     - PubSubClient
