--- a/thinx-esp8266-example/thinx.yml
+++ b/thinx-esp8266-example/thinx.yml
@@ -3,6 +3,8 @@ arduino:
   arch: esp8266
   board: d1_mini
   flash_ld: eagle.flash.4m1m.ld
+  f_cpu: 80
+  flash_size: 1M
   libs:
     - ArduinoJSON
     - WiFiManager
