--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/thinx-firmware-esp32"]
 	path = lib/thinx-firmware-esp32
 	url = git@github.com:suculent/thinx-firmware-esp32.git
+[submodule "lib/esp32-http-update"]
+	path = lib/esp32-http-update
+	url = https://github.com/suculent/esp32-http-update
