--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/Imroy/pubsubclient.git
 [submodule "lib/thinx-firmware-esp32"]
 	path = lib/thinx-firmware-esp32
-	url = git@github.com:suculent/thinx-firmware-esp32.git
+	url = https://github.com/suculent/thinx-firmware-esp32.git
 [submodule "lib/esp32-http-update"]
 	path = lib/esp32-http-update
 	url = https://github.com/suculent/esp32-http-update
