--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/suculent/thinx-firmware-esp32.git
 [submodule "lib/esp32-http-update"]
 	path = lib/esp32-http-update
-	url = https://github.com/suculent/esp32-http-update
+	url = https://github.com/suculent/esp32-http-update.git
